--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>rieu-ban</title>
-    <link rel="stylesheet" href="/themify-icons-font/themify-icons/themify-icons.css">
-    <link rel="stylesheet" href="/fontawesome-free-6.4.0-web/fontawesome-free-6.4.0-web/css/all.min.css">
+    <link rel="stylesheet" href="../themify-icons-font/themify-icons/themify-icons.css">
+    <link rel="stylesheet" href="../fontawesome-free-6.4.0-web/fontawesome-free-6.4.0-web/css/all.min.css">
     <link rel="stylesheet" href="./assets/css/base.css">
     <link rel="stylesheet" href="./assets/css/main.css">
-    <link rel="stylesheet" href="/grid-system/grid.css">
+    <link rel="stylesheet" href="../grid-system/grid.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
 
 </head>
